--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <div class="nav__logo">
-            <a href="#"><img class="img__logo" src="img/logo-trs.png "></a>
+            <a href="#"><img class="img__logo" src="logo-trs.png "></a>
         </div>
 
         <ul class="nav__links">
@@ -38,7 +38,7 @@
             <button class="btn">Iniciar projeto</button>
         </div>
         <div class="img">
-            <img src="img/header.png">
+            <img src="header.png">
         </div>
     </header>
 
@@ -157,7 +157,7 @@
         <span class="borrao"></span>
         <div class="coluna">
             <div class="logo">
-                <img src="img/logo-trs.png">
+                <img src="logo-trs.png">
             </div>
             
             <div class="social">
